[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
chrono = "0.4"
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
tabled = "0.17.0"
tokio = { version = "1.41.1", features = ["full"] }
